compile_fail_tests/tuple_arity_too_low.rs
use const_destructure::const_destructure;

fn main() {
    const_destructure!(let (a,) = (1, 2));
}
